--- a/Sorteio/app/src/main/res/layout/activity_main.xml
+++ b/Sorteio/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,10 @@
         app:layout_constraintTop_toBottomOf="@+id/text_exibicao" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/text_sorteio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
         android:text="Nenhum numero selecionado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
