--- a/AlcoolouGasolina/app/src/main/res/layout/activity_main.xml
+++ b/AlcoolouGasolina/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/img_logo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="btCalcular"
     tools:context=".MainActivity">
 
     <ImageView
@@ -61,6 +62,7 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
+        android:onClick="btCalcular"
         android:text="Calcular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
